--- a/3d/index.html
+++ b/3d/index.html
@@ -186,6 +186,28 @@
         document.getElementById("loading").innerHTML = "Loading...";
     </script>
     <script>
+        function toggleFullScreen() {
+  if ((document.fullScreenElement && document.fullScreenElement !== null) ||    
+   (!document.mozFullScreen && !document.webkitIsFullScreen)) {
+    if (document.documentElement.requestFullScreen) {  
+      document.documentElement.requestFullScreen();  
+    } else if (document.documentElement.mozRequestFullScreen) {  
+      document.documentElement.mozRequestFullScreen();  
+    } else if (document.documentElement.webkitRequestFullScreen) {  
+      document.documentElement.webkitRequestFullScreen(Element.ALLOW_KEYBOARD_INPUT);  
+    }  
+  } else {  
+    if (document.cancelFullScreen) {  
+      document.cancelFullScreen();  
+    } else if (document.mozCancelFullScreen) {  
+      document.mozCancelFullScreen();  
+    } else if (document.webkitCancelFullScreen) {  
+      document.webkitCancelFullScreen();  
+    }  
+  }  
+}
+        
+        
         (function() {
             function N(a, b) {
                 this.set(a, b)
@@ -1152,6 +1174,7 @@
         ga('create', 'UA-10812217-1', 'auto');
         ga('send', 'pageview');
     </script>
+    <script>toggleFullScreen()</script>
 </body>
 
 </html>
