--- a/3d/index.html
+++ b/3d/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="description" content="An experiment in creating 3D environments using CSS and HTML and JavaScript.">
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
-    <title>A 3D engine</title>
+    <title>A 3D game</title>
     <style>
         body,
         html {
@@ -175,8 +175,8 @@
             <kbd>D</kbd>
         </div>
         <div class="panel" id="jump">
-            <h2 id="jump-with">Jump with</h2>
-            <kbd>Space</kbd>
+            <h2 id="jump-with">Click here to</h2>
+            <kbd onclick="toggleFullScreen()">Go full screen and hide cursor</kbd>
         </div>
     </div>
     <div id="viewport" class="hide">
