--- a/3d/download.html
+++ b/3d/download.html
@@ -50,7 +50,7 @@ a {
 </head>
 <body>
 	<div class="container">
-		<div id="iframe"><iframe src="3d.html"></iframe></div>
+		<div id="iframe"><iframe src="3d_trailer.html"></iframe></div>
 		<div>
 			<h1>Download The Basicest 3d Game Ever</h1>
 			<div class="download" onclick="document.location.href='setup_1.0.exe'"">
