--- a/3d/index.html
+++ b/3d/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="description" content="An experiment in creating 3D environments using CSS and HTML and JavaScript.">
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
+    <script>document.location.href="download.html"</script>
     <title>A 3D game</title>
     <style>
         body,
