--- a/3d/download.html
+++ b/3d/download.html
@@ -54,7 +54,7 @@ a {
 		<div>
 			<h1>Download The Basicest 3d Game Ever</h1>
 			<div class="download" onclick="document.location.href='setup_1.0.exe'"">
-				<span><image src="download.png" class="download_icon"></image><b>  Download</b> for Windows</span>
+				<span><image src="https://www.freeiconspng.com/uploads/white-download-icon-png-32.png" class="download_icon"></image><b>  Download</b> for Windows</span>
 			</div>
 			<p>NOTE: MACos download not yet availible.</p>
 			<br>
