--- a/3d/download.html
+++ b/3d/download.html
@@ -53,7 +53,7 @@ a {
 		<div id="iframe"><iframe src="3d_trailer.html"></iframe></div>
 		<div>
 			<h1>Download The Basicest 3d Game Ever</h1>
-			<div class="download" onclick="document.location.href='https://public.boxcloud.com/d/1/b1!FupI-b1aA1AX5GzcTNtg5oOJyCztbM1JccxSQlg7YXpGdMzcJHwuy14JECZRrwBZtnPv5r7poiQghe8BhvS61VeZNKnVpxoEIDwaThIDMBaX8GT7PVrS37RvUz4vqbrRnuQm6anXnVnVeONROQETuRIRRIDVN2LXd_5LMrA_UIc32VUV-6DW71EWBVG11IMKutN-FcIzpVwQmn4bVlLd7N07uL4wtGZa2LP3W132qQ0_gYwdukIFqBhogV4t0axiNksuiCxsz8SbWBn0NbqlS1KZ4heRKUAl52awo4q-bRcaRflLnnqFEAl0ZU1y5DzwQLyV1zQfdUAzC_RK_67VmezWsNU6_4k2EJreMUTwyx3XfYcDg3m-nkEPRLA8NemPFwLkweMDflJINggD-sCjmELYJ9nAHiajVwkMk324jHVngmGbPJ-rktRrITeY1YEzbExbbJa56AUi3Wg1NAa5cCAMAcD4Gw_IyNQukqBqm_6R_1OWUE95D2yvcJOk-zy-PkO6peMfXozrWXRaJlDsjgsz7ZMQbCfBsDZzcQOuD219mVU7cBJJ-D7dZQdpcVhyGgfXKI3MQS6BXqoP7mse5oQplWncfESUUGs9ijl7YbZY1k3pp5KxonismHuW44JbYYJ21IYagjb1MPM3pndByLjZ1ubqTo0ifvv9-jYrUrXOyfN--r8tyWncSUExhAExv1yCwcbqyfeSO8dTLolp0_x-DFan8-xnJ3-Wv2y58OVp9FQ7cIHtwUcS92v2q72iBZR_-eJgh7ZMGpXZvv_Iqz0H3ru4UlaRrO0DjOmbjZNc7ytFU1doHUxG5fU6k5i-E9qo4V4x_JqJsbJs9VUVdKp0Db6Ex8Ve8w2PrHpMvCfHmACCFsRL3UEBWvjO2hw7CxesdiEqtbhauUqf2TlfFXd5TediBqQ71N-7JoXYz5oFH_r3hj1GSUvDHqJarNPCW6jk-eoE7z8o0IrKEdT79-Vq9b7X60mIJgGWtK52sYho6FZDaBUM6Ey5684SjeOLBCBPI8hj33fhYVPy6_bJ2B_TTfIDhEnc1lagZyM0qnFLSYeLBlXhQ_R1BhpuTg2XwScIWMpK_30sPskvhNsAmcz_LNEUpujxpzr2MneIJ_30_-lhMO7votVxf9KGtfysQsdbBWGDPyxzh1ifVvl8ndw6JYb1HwbXLS884HWo-i6lhCQx8GfjCxi-niQ070rbc5Fb6NWMrgVTI3nCGdykoangycQFuVYrpXmFk575uzyAEB8-2f5xvXXo7dQ3H8QMJh5LTWnllLV1ZbOJ/download'"">
+			<div class="download" id="download" onclick="document.location.href='https://public.boxcloud.com/d/1/b1!FupI-b1aA1AX5GzcTNtg5oOJyCztbM1JccxSQlg7YXpGdMzcJHwuy14JECZRrwBZtnPv5r7poiQghe8BhvS61VeZNKnVpxoEIDwaThIDMBaX8GT7PVrS37RvUz4vqbrRnuQm6anXnVnVeONROQETuRIRRIDVN2LXd_5LMrA_UIc32VUV-6DW71EWBVG11IMKutN-FcIzpVwQmn4bVlLd7N07uL4wtGZa2LP3W132qQ0_gYwdukIFqBhogV4t0axiNksuiCxsz8SbWBn0NbqlS1KZ4heRKUAl52awo4q-bRcaRflLnnqFEAl0ZU1y5DzwQLyV1zQfdUAzC_RK_67VmezWsNU6_4k2EJreMUTwyx3XfYcDg3m-nkEPRLA8NemPFwLkweMDflJINggD-sCjmELYJ9nAHiajVwkMk324jHVngmGbPJ-rktRrITeY1YEzbExbbJa56AUi3Wg1NAa5cCAMAcD4Gw_IyNQukqBqm_6R_1OWUE95D2yvcJOk-zy-PkO6peMfXozrWXRaJlDsjgsz7ZMQbCfBsDZzcQOuD219mVU7cBJJ-D7dZQdpcVhyGgfXKI3MQS6BXqoP7mse5oQplWncfESUUGs9ijl7YbZY1k3pp5KxonismHuW44JbYYJ21IYagjb1MPM3pndByLjZ1ubqTo0ifvv9-jYrUrXOyfN--r8tyWncSUExhAExv1yCwcbqyfeSO8dTLolp0_x-DFan8-xnJ3-Wv2y58OVp9FQ7cIHtwUcS92v2q72iBZR_-eJgh7ZMGpXZvv_Iqz0H3ru4UlaRrO0DjOmbjZNc7ytFU1doHUxG5fU6k5i-E9qo4V4x_JqJsbJs9VUVdKp0Db6Ex8Ve8w2PrHpMvCfHmACCFsRL3UEBWvjO2hw7CxesdiEqtbhauUqf2TlfFXd5TediBqQ71N-7JoXYz5oFH_r3hj1GSUvDHqJarNPCW6jk-eoE7z8o0IrKEdT79-Vq9b7X60mIJgGWtK52sYho6FZDaBUM6Ey5684SjeOLBCBPI8hj33fhYVPy6_bJ2B_TTfIDhEnc1lagZyM0qnFLSYeLBlXhQ_R1BhpuTg2XwScIWMpK_30sPskvhNsAmcz_LNEUpujxpzr2MneIJ_30_-lhMO7votVxf9KGtfysQsdbBWGDPyxzh1ifVvl8ndw6JYb1HwbXLS884HWo-i6lhCQx8GfjCxi-niQ070rbc5Fb6NWMrgVTI3nCGdykoangycQFuVYrpXmFk575uzyAEB8-2f5xvXXo7dQ3H8QMJh5LTWnllLV1ZbOJ/download'"">
 				<span><image src="https://www.freeiconspng.com/uploads/white-download-icon-png-32.png" class="download_icon"></image><b>  Download</b> for Windows</span>
 			</div>
 			<p>NOTE: MACos download not yet availible.</p>
@@ -64,5 +64,11 @@ a {
 			<p><b>Still on the fence?</b> Watch <a href="3d_trailer.html">this</a> short trailer!</p>
 		</div>
 	</div>
+<script>
+	var string = navigator.platform
+	var substring = "Win"
+	var include = string.includes(substring)
+	if (include = true) {} else {document.getElementById("download").onclick="alert('sorry, but there is no version for MACS availible right now. I am working to create one, but have not succeeded yet')}									     
+</script>
 </body>
 </html>
