--- a/3d/download.html
+++ b/3d/download.html
@@ -62,6 +62,7 @@ a {
 			<p>The basicest 3d game ever is a very simple closed-room first-person exploration game.</p>
 			<p>There is no game objective to Th Basicest 3d Game Ever, but it is fun for a few minutes.</p><br>
 			<p><b>Still on the fence?</b> Watch <a href="3d_trailer.html">this</a> short trailer!</p>
+			<a href="javascript:alert("CREDITS\nI am not the original creator of this, the map and art are not mine.\nHowever, I did redo the physics and much of the backend of the programming. \n\nAll appropriate credit to the original creator.")>Credits</a>
 		</div>
 	</div>
 <script>
