--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
+<!DOCTYPE html>
 <html>
 <head>
-<script>document.location.href="3d/download.html"</script>
+	<title>AJM Global</title>
+	<script src="js/jquery.js"></script>
+	<link href="style.css" rel="stylesheet">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="AJM Global - our address is local but our operation is globals">
+	<meta name="keywords" content="AJM global,consulting,ecommerce,ecommerce consulting">
+	<meta name="author" content="AJM Global">
 </head>
-<body>IF YOU ARE NOT REDIRECTED, PLEASE ALLOW JAVASCRIPT, OR <a href="3d/download.html">CLICK HERE</a></body>
+<body>
+
+</body>
 </html>
