--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	</div>
 	<div class="desc">
 		<h1 class="sans">Our address is local but our operation is <span class="global">GLOBAL</span></h1>
-		<p class="detail">Our operation and impact spreads GLOBALly. Mainly focusing on GLOBAL ecommerce retail and online web presence, we want to help others following the same path that we are on using our data driven skills paired with the expertise you can trust here at <span class="sans">AJM GLOBAL</span></p>
+		<p class="detail">Our operation and impact spreads globally. Mainly focusing on global ecommerce retail and online web presence, we want to help others following the same path that we are on using our data driven skills paired with the expertise you can trust here at <span class="sans">AJM GLOBAL</span></p>
 	</div>
 	<script>
 		setTimeout(function(){ document.getElementById("animator").style.width = "86%";hide() }, 300);
