--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<meta name="keywords" content="AJM GLOBAL,consulting,ecommerce,ecommerce consulting">
 	<meta name="author" content="AJM GLOBAL">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans|Raleway" rel="stylesheet">
+	<link rel="shortcut icon" type="image/png" href="assets/globe.png"/>
 </head>
 <body>
 	<div class="loading" id="loading">
@@ -22,8 +23,20 @@
 		<image src="assets/ajmSimpleTrans.png" class="image"></image>
 	</div>
 	<div class="desc">
-		<h1 class="sans">Our address is local but our operation is <span class="global">GLOBAL</span></h1>
+		<h1 class="sans">Our address is local but our operation is <span class="global">GL<span><img class="inline-globe" src="assets/globeTrans.png" alt="O"></span>BAL</span></h1>
 		<p class="detail">Our operation and impact spreads globally. Mainly focusing on global ecommerce retail and online web presence, we want to help others following the same path that we are on using our data driven skills paired with the expertise you can trust here at <span class="sans">AJM GLOBAL</span></p>
+	</div>
+	<br>
+	<div class="row">
+		<div class="col">
+			asdfasdf
+		</div>
+		<div class="col">
+			asdfasdf
+		</div>
+		<div class="col">
+			asdfasdf
+		</div>
 	</div>
 	<script>
 		setTimeout(function(){ document.getElementById("animator").style.width = "86%";hide() }, 300);
