--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<title>AJM GLOBAL</title>
-	<script src="js/jquery.js"></script>
-	<link href="css/style.css" rel="stylesheet">
+	<script src="assets/js/jquery.js"></script>
+	<link href="assets/css/style.css" rel="stylesheet">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="AJM GLOBAL - our address is local but our operation is GLOBALs">
@@ -19,25 +19,17 @@
 			<div class="animator" id="animator"></div>
 		</div>
 	</div>
-	<div class="logo">
-		<image src="assets/ajmSimpleTrans.png" class="image"></image>
-	</div>
-	<div class="desc">
-		<h1 class="sans">Our address is local but our operation is <span class="global">GL<span><img class="inline-globe" src="assets/globeTrans.png" alt="O"></span>BAL</span></h1>
-		<p class="detail">Our operation and impact spreads globally. Mainly focusing on global ecommerce retail and online web presence, we want to help others following the same path that we are on using our data driven skills paired with the expertise you can trust here at <span class="sans">AJM GLOBAL</span></p>
+	<div class="header">
+		<div class="logo">
+			<image src="assets/ajmSimpleTrans.png" class="image"></image>
+		</div>
+		<div class="desc">
+			<h1 class="sans">Our address is local but our operation is <span class="global">GL<span><img class="inline-globe" src="assets/globeTrans.png" alt="O"></span>BAL</span></h1>
+			<p class="detail">Our operation and impact spreads globally. Mainly focusing on global ecommerce retail and online web presence, we want to help others following the same path that we are on using our data driven skills paired with the expertise you can trust here at <span class="sans">AJM GLOBAL</span></p>
+		</div>
 	</div>
 	<br>
-	<div class="row">
-		<div class="col">
-			asdfasdf
-		</div>
-		<div class="col">
-			asdfasdf
-		</div>
-		<div class="col">
-			asdfasdf
-		</div>
-	</div>
+	<div class="content">adsfa</div>
 	<script>
 		setTimeout(function(){ document.getElementById("animator").style.width = "86%";hide() }, 300);
 		function hide() {
