--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
 	<br>
 	<div class="content">
 		<div class="row">
-		  <div class="column" style="background-color:#aaa;" data-aos="fade-up" data-aos-duration="3000">
+		  <div class="column shadow" style="background-color:#aaa;">
 		    <h2>Column 1</h2>
 		    <p>Some text..</p>
 		  </div>
-		  <div class="column" style="background-color:#bbb;">
+		  <div class="column shadow" style="background-color:#bbb;">
 		    <h2>Column 2</h2>
 		    <p>Some text..</p>
 		  </div>
-		  <div class="column" style="background-color:#ccc;">
+		  <div class="column shadow" style="background-color:#ccc;">
 		    <h2>Column 3</h2>
 		    <p>Some text..</p>
 		  </div>
@@ -54,8 +54,12 @@
 			setTimeout(function(){ 
 				document.getElementById("ldgImg").style.display = "none";
 				document.getElementById("loading").style.backgroundColor = "transparent"; }, 3000);
+			setTimeout(function(){ 
+				var element = document.getElementById("loading");
+				element.parentNode.removeChild(element); }, 4500);
+
+				
 		}
-		ScrollReveal().reveal('.column');
 	</script>
 </body>
 </html>
