--- a/index.html
+++ b/index.html
@@ -35,16 +35,16 @@
 	<div class="content">
 		<div class="row">
 		  <div class="column shadow" style="background-color:#aaa;">
-		    <h2>Column 1</h2>
-		    <p>Some text..</p>
+		    <h2>What we do</h2>
+		    <p>Sextus bites the wolf</p>
 		  </div>
 		  <div class="column shadow" style="background-color:#bbb;">
-		    <h2>Column 2</h2>
-		    <p>Some text..</p>
+		    <h2>What we cost</h2>
+		    <p>Or does the wolf bite sextus</p>
 		  </div>
 		  <div class="column shadow" style="background-color:#ccc;">
-		    <h2>Column 3</h2>
-		    <p>Some text..</p>
+		    <h2>How do we do it?</h2>
+		    <p>The ultimate question</p>
 		  </div>
 		</div>
 	</div>
