--- a/index.html
+++ b/index.html
@@ -37,14 +37,17 @@
 		  <div class="column shadow" style="background-color:#aaa;">
 		    <h2>What we do</h2>
 		    <p>Sextus bites the wolf</p>
+		    <a href="what.html">Learn more</a>
 		  </div>
 		  <div class="column shadow" style="background-color:#bbb;">
 		    <h2>What we cost</h2>
 		    <p>Or does the wolf bite sextus</p>
+		    <a href="cost.html">Learn more</a>
 		  </div>
 		  <div class="column shadow" style="background-color:#ccc;">
 		    <h2>How do we do it?</h2>
 		    <p>The ultimate question</p>
+		    <a href="how.html">Learn more</a>
 		  </div>
 		</div>
 	</div>
