Final ready to show am

--- a/index.html
+++ b/index.html
@@ -34,20 +34,20 @@
 	<br>
 	<div class="content">
 		<div class="row">
-		  <div class="column shadow" style="background-color:#aaa;">
+		  <div class="column shadow">
 		    <h2>What we do</h2>
 		    <p>Sextus bites the wolf</p>
-		    <a href="what.html">Learn more</a>
+		    <a href="land.html">Learn more</a>
 		  </div>
-		  <div class="column shadow" style="background-color:#bbb;">
+		  <div class="column shadow">
 		    <h2>What we cost</h2>
 		    <p>Or does the wolf bite sextus</p>
-		    <a href="cost.html">Learn more</a>
+		    <a href="land.html">Learn more</a>
 		  </div>
-		  <div class="column shadow" style="background-color:#ccc;">
+		  <div class="column shadow">
 		    <h2>How do we do it?</h2>
 		    <p>The ultimate question</p>
-		    <a href="how.html">Learn more</a>
+		    <a href="land.html">Learn more</a>
 		  </div>
 		</div>
 	</div>
