--- a/map/index.html
+++ b/map/index.html
@@ -189,6 +189,7 @@ table.minimalistBlack tfoot td {
 </style>
 
 <script>
+alert("ADMIN:\n\nRemember to go into admin options and enable features you want!\n\nNote: you will need to do this every time the page loads")
 //   var admin = prompt("Do you have the admin passowrd? If so, enter it. If no, type no")
 // if (admin==="science") {
 // alert("Admin access GRANTED")
