--- a/ajm/index.html
+++ b/ajm/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>AJM GLOBAL</title>
 	<script src="assets/js/jquery.js"></script>
+	<script src="assets/js/script.js"></script>
 	<link href="assets/css/style.css" rel="stylesheet">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -37,7 +38,7 @@
 		  <div class="column shadow">
 		    <h2>What we do</h2>
 		    <p>Sextus bites the wolf</p>
-		    <a href="land.html">Learn more</a>
+		    <a href="javascript:modalize('wedo')">Learn more</a>
 		  </div>
 		  <div class="column shadow">
 		    <h2>What we cost</h2>
@@ -51,6 +52,18 @@
 		  </div>
 		</div>
 	</div>
+
+<!-- The Modal -->
+<div id="wedo" class="modal">
+
+  <!-- Modal content -->
+  <div class="modal-content">
+    <span id="wedoclose" class="close">&times;</span>
+    <iframe src="land.html" style="width:100%;height:90%;border-style:none;outline-style:none"></iframe>
+  </div>
+
+</div>
+
 	<script>
 		setTimeout(function(){ document.getElementById("animator").style.width = "86%";hide() }, 300);
 		function hide() {
@@ -66,24 +79,5 @@
 
 	</script>
 
-<script>
-  (function(){
-    var t,i,e,n=window,o=document,a=arguments,s="script",r=["config","track","identify","visit","push","call","trackForm","trackClick"],c=function(){var t,i=this;for(i._e=[],t=0;r.length>t;t++)(function(t){i[t]=function(){return i._e.push([t].concat(Array.prototype.slice.call(arguments,0))),i}})(r[t])};for(n._w=n._w||{},t=0;a.length>t;t++)n._w[a[t]]=n[a[t]]=n[a[t]]||new c;i=o.createElement(s),i.async=1,i.src="//static.woopra.com/js/w.js",e=o.getElementsByTagName(s)[0],e.parentNode.insertBefore(i,e)
-  })("woopra");
-
-  woopra.config({
-      domain: 'jackcrane.github.io'
-  });
-  woopra.track();
- COUNT(
-  UNIQUE_PROPERTY(
-    VISIT_PROPERTY(ip),
-    IF(IS_ACTION_REGULAR()),
-    FROM(89,D),
-    TO(0,D)
-  )
-)
-</script>
-<!-- End of Woopra Code -->
 </body>
 </html>
