--- a/index.html
+++ b/index.html
@@ -1,4 +1,62 @@
-<a href="ajm">ajm</a><br><br>
-<a href="jack">jack</a><br><br>
-<a href="map">map</a><br><br>
-<a href="dna">dna</a><br><br>
+<!DOCTYPE html>
+<html>
+<head>
+	<title></title>
+	<link href="style.css" rel="stylesheet">
+	<!--Import Google Icon Font-->
+      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+      <!--Import materialize.css-->
+      <link type="text/css" rel="stylesheet" href="materialize/css/materialize.css"  media="screen,projection"/>
+      <meta content="width=device-width, initial-scale=1" name="viewport" />
+      <script type="text/javascript" src="jquery.js"></script>
+      <script type="text/javascript" src="materialize/js/materialize.js"></script>
+</head>
+<body>
+<div class="header-container">
+	<img src="https://png.pngtree.com/thumb_back/fh260/back_pic/03/62/30/9157aa94e693d90.jpg" width="100%">
+	<div class="title">Jack Crane</div>
+	<div class="subtitle">High schooler, independent HTML web dev</div>
+</div>
+<div class="padded_container">
+	<div class="padded_sys col s12 m2 z-depth-4 ">
+  		<a class="waves-effect waves-light btn-large" style="width:98%;margin:1%" href="#">AJM</a>
+  		<h3>AJM Global</h3>
+  		<p>A site I made for one of my friend's companies.</p>
+  		<p>Goals of this site:</p>
+  			<li>Active web presence</li>
+  			<li>Put our best foot forward for potential customers</li>
+  	</div>
+  	<div class="padded_sys col s12 m2 z-depth-4">
+  		<a class="waves-effect waves-light btn-large" style="width:98%;margin:1%" href="#">Map</a>
+  		<h3>Map</h3>
+  		<p>A simple, nonstyled site made to computerize the graphing of hurricane locations and speeds for a science activity</p>
+  		<p>Goals of this site:</p>
+  			<li>Be extremely lightweight</li>
+  			<li>Graph hurricanes in the most simple manner possible</li>
+  			<li>Deploy for the use of my teacher and classmates</li>
+  	</div>
+  	<div class="padded_sys col s12 m2 z-depth-4">
+  		<a class="waves-effect waves-light btn-large" style="width:98%;margin:1%" href="#">DNA</a>
+  		<h3>DNA</h3>
+  		<p>A simple, nonstyled site made to computerize the translation of DNA to mRNA to the color codes.</p>
+  		<p>Goals of this site:</p>
+  			<li>Use simple javascript to replace letters with colors</li>
+  	</div>
+  	<div class="padded_sys col s12 m2 z-depth-4">
+  		<a class="waves-effect waves-light btn-large" style="width:98%;margin:1%" href="#">7 Sigma robotics</a>
+  		<h3>7 Sigma</h3>
+  		<p>A simplistically designed website for my robotics team</p>
+  		<p>Goals of this site:</p>
+  			<li>Obtain an online presence</li>
+  			<li>Provide a means to connect to our community</li>
+  	</div>
+</div>
+<div class="footer">
+	JACK CRANE <br>
+	Experience in: HTML, PHP, Javascript
+</div>
+
+<script type="text/javascript" src="materialize/js/materialize.min.js"></script>
+<script type="text/javascript" src="init.js"></script>
+</body>
+</html>
