--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </div>
 <div class="padded_container">
 	<div class="padded_sys col s12 m2 z-depth-4 ">
-  		<a class="waves-effect waves-light btn-large" style="width:98%;margin:1%" href="#">AJM</a>
+  		<a class="waves-effect waves-light btn-large" style="width:98%;margin:1%" href="ajm/">AJM</a>
   		<h3>AJM Global</h3>
   		<p>A site I made for one of my friend's companies.</p>
   		<p>Goals of this site:</p>
@@ -27,7 +27,7 @@
   			<li>Put our best foot forward for potential customers</li>
   	</div>
   	<div class="padded_sys col s12 m2 z-depth-4">
-  		<a class="waves-effect waves-light btn-large" style="width:98%;margin:1%" href="#">Map</a>
+  		<a class="waves-effect waves-light btn-large" style="width:98%;margin:1%" href="map/">Map</a>
   		<h3>Map</h3>
   		<p>A simple, nonstyled site made to computerize the graphing of hurricane locations and speeds for a science activity</p>
   		<p>Goals of this site:</p>
@@ -36,14 +36,14 @@
   			<li>Deploy for the use of my teacher and classmates</li>
   	</div>
   	<div class="padded_sys col s12 m2 z-depth-4">
-  		<a class="waves-effect waves-light btn-large" style="width:98%;margin:1%" href="#">DNA</a>
+  		<a class="waves-effect waves-light btn-large" style="width:98%;margin:1%" href="dna/">DNA</a>
   		<h3>DNA</h3>
   		<p>A simple, nonstyled site made to computerize the translation of DNA to mRNA to the color codes.</p>
   		<p>Goals of this site:</p>
   			<li>Use simple javascript to replace letters with colors</li>
   	</div>
   	<div class="padded_sys col s12 m2 z-depth-4">
-  		<a class="waves-effect waves-light btn-large" style="width:98%;margin:1%" href="#">7 Sigma robotics</a>
+  		<a class="waves-effect waves-light btn-large" style="width:98%;margin:1%" href="7sigmarobotics/">7 Sigma robotics</a>
   		<h3>7 Sigma</h3>
   		<p>A simplistically designed website for my robotics team</p>
   		<p>Goals of this site:</p>
