--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   			<li>Use simple javascript to replace letters with colors</li>
   	</div>
   	<div class="padded_sys col s12 m2 z-depth-4">
-  		<a class="waves-effect waves-light btn-large" style="width:98%;margin:1%" href="7sigmarobotics/">7 Sigma robotics</a>
+  		<a class="waves-effect waves-light btn-large" style="width:98%;margin:1%" href="fan5fll.github.io/7sigmarobotics">7 Sigma robotics</a>
   		<h3>7 Sigma</h3>
   		<p>A simplistically designed website for my robotics team</p>
   		<p>Goals of this site:</p>
