WiSP final beta?

--- a/projectwisp/index.html
+++ b/projectwisp/index.html
@@ -23,8 +23,8 @@
   </h2>
 
 <div>
-  <img id="slideshow">
-  <button onclick="lastslide()"><</a><button onclick="nextslide()">></a>
+  <button class="advancer" onclick="lastslide()">< Previous</a><button class="advancer" onclick="nextslide()">Next ></a></button><br>
+  <img id="slideshow" class="slideshow" src="WiSP_conceptLogo.jpg">
 </div>
 
 
