--- a/generator.html
+++ b/generator.html
@@ -84,8 +84,8 @@ Background colors:
 Font colors:
 <table>
 	<tr>
-		<th id="themeBgDisplay2"><input type="text" onchange="check()" placeholder="#normal" id="themeFc" maxlength="7"><p id="themeFcShow">Color</p></th>
-		<th id="disabledBgDisplay2"><input type="text" onchange="check()" placeholder="#light" id="disabledFc" maxlength="7"><p id="disabledFcShow">Color</p></th>
+		<th id="themeBgDisplay2"><input type="text" onchange="check()" placeholder="#normal" id="themeFc"><p id="themeFcShow">Color</p></th>
+		<th id="disabledBgDisplay2"><input type="text" onchange="check()" placeholder="#light" id="disabledFc"><p id="disabledFcShow">Color</p></th>
 	</tr>
 </table><br>
 <button onclick="compile()">Compile</button>
