--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
   			<li>Use simple javascript to replace letters with colors</li>
   	</div>
   	<div class="padded_sys col s12 m2 z-depth-4">
-  		<a class="waves-effect waves-light btn-large" style="width:98%;margin:1%" href="fan5fll.github.io/7sigmarobotics">7 Sigma robotics</a>
-  		<h3>7 Sigma</h3>
-  		<p>A simplistically designed website for my robotics team</p>
-  		<p>Goals of this site:</p>
-  			<li>Obtain an online presence</li>
-  			<li>Provide a means to connect to our community</li>
+  		<a class="waves-effect waves-light btn-large" style="width:98%;margin:1%" href="ext_gpa.zip">GPA Calc</a>
+  		<h3>GPA Calc</h3>
+  		<p>A javascript plugin to myschoolapp to calculate GPA</p>
+  		<p>Goals of this Chrome Extension:</p>
+  			<li>Calculate GPA</li>
+  			<li>Distribute to classmates</li>
   	</div>
 </div>
 <div class="footer">
