--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       <meta content="width=device-width, initial-scale=1" name="viewport" />
       <script type="text/javascript" src="jquery.js"></script>
       <script type="text/javascript" src="materialize/js/materialize.js"></script>
+      <title>Jack Crane</title>
       <!-- Global site tag (gtag.js) - Google Analytics -->
       <script async src="https://www.googletagmanager.com/gtag/js?id=UA-139549936-1"></script>
       <script>
