--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   			<li>Use simple javascript to replace letters with colors</li>
   	</div>
   	<div class="padded_sys col s12 m2 z-depth-4">
-  		<a class="waves-effect waves-light btn-large" style="width:98%;margin:1%" href="ext_gpa.zip">GPA Calc</a>
+  		<a class="waves-effect waves-light btn-large" style="width:98%;margin:1%" href="https://chrome.google.com/webstore/detail/myschoolapp-gpa-calculato/jfbodkjgjenlagkjepebmpnhekihgplo">GPA Calc</a>
   		<h3>GPA Calc</h3>
   		<p>A javascript plugin to myschoolapp to calculate GPA</p>
   		<p>Goals of this Chrome Extension:</p>
