--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </div>
 <div class="padded_container">
 	<div class="padded_sys col s12 m2 z-depth-4 ">
-  		<a class="waves-effect waves-light btn-large" style="width:98%;margin:1%" href="ajm/">AJM</a>
+  		<a class="waves-effect waves-light btn-large" style="width:98%;margin:1%" href="#">AJM</a>
   		<h3>AJM Global</h3>
   		<p>A site I made for one of my friend's companies.</p>
   		<p>Goals of this site:</p>
