--- a/index.html
+++ b/index.html
@@ -31,11 +31,10 @@
 <div class="padded_container">
 	<div class="padded_sys col s12 m2 z-depth-4 ">
   		<a class="waves-effect waves-light btn-large" style="width:98%;margin:1%" href="#">AJM</a>
-  		<h3>AJM Global</h3>
-  		<p>A site I made for one of my friend's companies.</p>
+  		<h3>Photo System</h3>
+  		<p>A complete system to alleviate stress on our phones</p>
   		<p>Goals of this site:</p>
-  			<li>Active web presence</li>
-  			<li>Put our best foot forward for potential customers</li>
+  			<li>Run on LAN and create a repository for all of our images</li>
   	</div>
   	<div class="padded_sys col s12 m2 z-depth-4">
   		<a class="waves-effect waves-light btn-large" style="width:98%;margin:1%" href="map/">Map</a>
