--- a/index.html
+++ b/index.html
@@ -37,13 +37,11 @@
   			<li>Run on LAN and create a repository for all of our images</li>
   	</div>
   	<div class="padded_sys col s12 m2 z-depth-4">
-  		<a class="waves-effect waves-light btn-large" style="width:98%;margin:1%" href="map/">Map</a>
-  		<h3>Map</h3>
-  		<p>A simple, nonstyled site made to computerize the graphing of hurricane locations and speeds for a science activity</p>
-  		<p>Goals of this site:</p>
-  			<li>Be extremely lightweight</li>
-  			<li>Graph hurricanes in the most simple manner possible</li>
-  			<li>Deploy for the use of my teacher and classmates</li>
+  		<a class="waves-effect waves-light btn-large" style="width:98%;margin:1%" href="https://chrome.google.com/webstore/detail/pc-pin-inserter/kfbaafjlknkmeoihikbnifkdonljeamn">PC Pin Inserter</a>
+  		<h3>PC PIN Inserter</h3>
+  		<p>A simple chrome extension that automatically logs into the PCL wifi every time we get booted</p>
+  		<p>Goals:</p>
+  			<li>Maintain our sanity by not having to log in every 30 seconds</li>
   	</div>
   	<div class="padded_sys col s12 m2 z-depth-4">
   		<a class="waves-effect waves-light btn-large" style="width:98%;margin:1%" href="dna/">DNA</a>
