--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
 					<br>
 					<p>Special thanks to <a href="https://www.thingiverse.com/duck_toy">duck_toy</a> for the <a href="https://www.thingiverse.com/thing:2863108">low poly person model</a>, and Adobe-powered <a href="https://www.mixamo.com/">Mixamo</a> for the animations</p>
 					<br>
+					<p>Download the Unity project <a href="https://drive.google.com/file/d/1mykmQST3nbllCYOLLP_SSQh3ClTK_LsC/view?usp=sharing">here</a></p>
+					<br>
 				</div>
 			</div>
 			<div class="subsect"><hr></div>
