--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
 					<h2 style="font-size:1rem">Then c#...</h2>
 					<h2 style="font-size:0.7rem">Then mysql...</h2>
 					<h2 style="font-size:0.5rem">Then C++...</h2>
+					<h2>My previous works:</h2>
+					<a href="scarecrowrow2.github.io">Scarecrow Row 2</a>
+					<a href="projectwisp.github.io">Project Wisp</a>
 				</div>
 			</div>
 			<div class="subsect"><hr></div>
