--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@
 					<p>Add me on Discord  <code>fantastic1#0597</code></p><br>
 					<p>Or just shoot me an email at <a href="mailto:3jbc22@gmail.com">3jbc22@gmail.com</a></p>
 					<br>
+					<br>
+					<h2>Want to use what I have made?</h2>
+					<a href="https://github.com/jackcrane/jackcrane.github.io/wiki/jconsole">jconsole</p>
 				</div>				
 			</div>
 		</div>
