--- a/ethanbrand/index.html
+++ b/ethanbrand/index.html
@@ -7,8 +7,14 @@
 </head>
 <body>
 	<div class="titleContainer">
-		<img src="assets/ethan2.png">
+		<img src="assets/ethan2.PNG">
 		<h1 class="titleText">Ethan Brand</h1>
+	</div>
+	<div class="bodyContainerWhite">
+		<h1 class="library">The Ethan Brand Animation</h1>
+		<div class="content">
+			<p>Ethan Brand is a short story written by Nathanial Hawthorne in 1850.</p>
+		</div>
 	</div>
 </body>
 </html>
